clean up, make compilable (for me)